--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,6 +6,148 @@
 */
 @import url('./reset.css');
 
-*{
+* {
   box-sizing: border-box;
+}
+
+.hidden {
+display: none;
+}
+
+.loader {
+    position: fixed;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 40px;
+    height: 60px;
+    animation: heartBeat 1.2s infinite cubic-bezier(0.215, 0.61, 0.355, 1);
+  }
+
+  .loader:before,
+  .loader:after {
+    content: "";
+    background: #ff3d00 ;
+    width: 40px;
+    height: 60px;
+    border-radius: 50px 50px 0 0;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    transform: rotate(45deg);
+    transform-origin: 50% 68%;
+    box-shadow: 5px 4px 5px #0004 inset;
+  }
+  .loader:after {
+    transform: rotate(-45deg);
+  }
+  @keyframes heartBeat {
+    0% { transform: scale(0.95) }
+    5% { transform: scale(1.1) }
+    39% { transform: scale(0.85) }
+    45% { transform: scale(1) }
+    60% { transform: scale(0.95) }
+    100% { transform: scale(0.9) }
+  }
+
+
+
+
+.search-form {
+  display: flex;
+  justify-content: center;
+  gap: 8px;
+
+  margin-bottom: 32px;
+}
+
+input {
+  font-family: Montserrat, sans-serif;
+  color: #2e2f42;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
+  width: 272px;
+  height: 40px;
+  padding: 8px 16px;
+
+  border: solid 1px #808080;
+  border-radius: 4px;
+  transition: outline-color 0.5s ease, border-color 0.5s ease;
+}
+
+input:hover {
+  border-color: #000000;
+}
+
+input::placeholder {
+  color: #2e2f42;
+}
+
+button {
+  font-family: Montserrat, sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: #ffffff;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
+  background-color: #4e75ff;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 8px;
+
+  transition: background-color 0.5s ease;
+}
+
+button:hover {
+  background-color: #6c8cff;
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.descr-list {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.descr-item {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  padding: 4px 0 4px 0;
+}
+
+.gallery-image {
+  width: 360px;
+  height: 152px;
+  object-fit: cover;
+  object-position: top;
+}
+
+.gallery-item {
+  border: solid 1px #808080;
+}
+
+.descr-header {
+  font-family: Montserrat, sans-serif;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+}
+
+.descr-value {
+  font-family: Montserrat, sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
 }
