--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,9 +10,22 @@
   box-sizing: border-box;
 }
 
+body{
+  padding: 40px 0;
+}
+
+.container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 32px;
+}
+
 .hidden {
 display: none;
 }
+
+
 
 .loader {
     position: fixed;
